<resources>
    <string name="app_name">FitToBe</string>

    <string name="slide_1_title">Discover New You !</string>
    <string name="slide_1_description">Are you tired of all the promises that tells you can lose fat in just a few days?</string>

    <string name="slide_2_title">Fit To Be</string>
    <string name="slide_2_description">Explore amazing features with multiple exercising videos</string>

    <string name="slide_3_title">Try For Free</string>
    <string name="slide_3_description">No subscription needed, all it needs your determination to get your dream body !</string>

    <string name="slide_4_title">Be A VIP</string>
    <string name="slide_4_description">VIP users get premium features by free registering</string>
    <string name="slide_5_title">Meet Me At The Bar</string>
    <string name="slide_5_description">Why to wait? get your dream body today!</string>
    <string name="app_shared_preference">com.example.fittobe</string>
    <string name="app_shared_preference_key">com.example.fittobe.key</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="signed_up_key">isSginedUp</string>
    <string name="try_free">Try Free</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="open_main_activity_free">free trail</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="weight">Weight (KG)</string>
    <string name="full_name_error">Invalid First Name,enter more than 5 characters</string>
    <string name="email_length_error">email must be at least 7 characters</string>
    <string name="email_error">The email format is invalid.</string>
    <string name="password_length_error">Invalid Password: Password must be 6 chars long</string>
    <string name="password_char_error">Invalid Password:Password must have 1 letter</string>
    <string name="password_number_error">Invalid Password:Password must have 1 number</string>
    <string name="password_special_char_error">Invalid Password:Password must have 1 special character</string>
    <string name="email_exisits_error">Email exisits</string>
    <string name="email_key">email</string>
    <string name="password_key">password</string>
    <string name="null_temp">null</string>
    <string name="invalid">invalid email or password</string>
    <string name="logged_in">looged</string>
    <string name="menu_description">Settings Menu</string>
    <string name="favorite_exercises">Favorite workouts</string>
    <string name="all_exercises">All workouts</string>
    <string name="log_out">Log Out</string>
    <string name="check_me">are you sure you want to leave?</string>
    <string name="button_cancel">Cancel</string>
    <string name="tag">tag</string>
    <string name="button_ok">ok</string>
    <string name="workouts">Workouts</string>
    <string name="start_time">Start Time</string>
    <string name="workout_name">name</string>
    <string name="workout_id">id</string>
    <string name="gender">Male</string>
    <string name="female">Female</string>
    <string name="users">users</string>
    <string name="choose_gender">Choose gender</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="removeFromFavorite">Remove From Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Added to Widget</string>
    <string name="exercise_key">exercise key</string>
    <string name="finished">Press me When finished!</string>
    <string name="good">Great Work!</string>
</resources>
