<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/settings"
        android:title=""
        android:contentDescription="@string/menu_description"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/favorite"
                android:icon="@drawable/star"
                android:title="@string/add_widget"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/all"
                android:icon="@drawable/home"
                android:title="@string/all_exercises"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/log_out"
                android:title="@string/log_out"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>