<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/slide_description_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size" />


    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/slide_description_margin_start"
        android:layout_marginEnd="@dimen/slide_description_margin_start"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:hint="@string/email"
        android:textColorHint="@color/light_grey"

        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/slide_description_margin_start"
        android:layout_marginEnd="@dimen/slide_description_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"

        android:textSize="@dimen/default_text_size" />
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/default_button_width"

        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/button_margin_top"/>
</LinearLayout>